--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<title> About | Talha Ali Khan </title>
-	<link rel="stylesheet" href="images/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
+	
+<img src="images/talha_n.jpg">
 
 	<header>
 		<nav>
-		<a>About</a>  | <a href="images/css/portfolio.html">Portfolio</a>
+		<a>About</a> | <a href="portfolio.html">Portfolio</a>
+		
 		</nav>
 
 
@@ -17,18 +20,18 @@
 
 	</header>
 
-	<hr>
+	
+
 	<p> 
-	I recently graduated from a Front-End Web Development course at General Assembly where I learned HTML, CSS, JavaScript, jQuery and how to be an awesome Front-End Web Developer! During my spare time, I enjoy senior water aerobics, pickling, and spending time with my goldfish, Jerry.
+	I want to use my marketing and customer experience skills and apply them on developing websites which are more customer centric and at the same time enhancing the customer experience. 
 	</p>
 	
-	<img src="https://social.microsoft.com/profile/u/avatar.jpg?displayname=florian+auer&size=extralarge&version=bd0896cb-3be0-4ab5-a234-042113506f55">
 
-<img src="" alt= "Talha Ali Khan">
+	
+<nav>
+<a href="https://www.facebook.com/"> Facebook </a> | <a href="https://www.linkedin.com/feed/"> Linkedin </a> | <a href="https://twitter.com/login"> Twitter </a>
 
-<a href="https://www.facebook.com/"> Facebook </a> 
-
-<a href="https://www.linkedin.com/feed/"> Linkedin </a>
+</nav>
 
 
 
